--- a/ecom/index.html
+++ b/ecom/index.html
@@ -26,12 +26,12 @@
       <ul id="navbar">
         <li><a class="active" href="./index.html">Home</a></li>
         <li><a href="./shop.html">Shop</a></li>
-        <li><a href="./blog.html">Blog</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
         <li id="lg-bag">
           <!-- Cart icon -->
-          <a href="./cart.html"><i class="fa-regular fa-bag-shopping"></i></a>
+          <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>
         </li>
         <a href="#" id="close"> <i class="far fa-times"></i></a>
       </ul>
