--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -79,14 +79,14 @@
             >
               <div
                 id="btn-loader"
-                class="flex gap-3 font-medium text-md justify-center items-center hidden"
+                class="flex gap-3 text-md justify-center items-center hidden"
               >
                 <div
                   class="animate-spin rounded-full h-6 w-6 border-t-4 border-white"
                 ></div>
                 <p>Please Wait...</p>
               </div>
-              <p id="Roast-text" class="">🔥 ROAST HIM</p>
+              <p id="Roast-text" class="">🔥 LET'S ROAST</p>
             </button>
           </form>
         </div>
