made it mobile friendly

--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -22,7 +22,7 @@
     >
       <!-- Card -->
       <div
-        class="bg-white bg-opacity-10 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl p-4 flex gap-4 m-40 justify-center"
+        class="bg-white bg-opacity-10 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl p-4 flex flex-col gap-4 m-auto sm:flex-row sm:m-40 justify-center"
       >
         <!-- Input Box -->
         <div class="flex flex-col gap-2 w-80">
@@ -96,7 +96,7 @@
         <!-- Roast Box -->
         <div
           id="roast-box"
-          class="flex flex-col gap-3 w-[600px] hidden transition duration-800"
+          class="flex flex-col gap-3 sm:w-[600px] hidden transition duration-800"
         >
           <h1 class="text-white font-black text-3xl">
             <span class="animate-pulse">🔥</span> ROAST
