change fav icon and

--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -12,7 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>🔥Roast My Friend</title>
+    <link
+      rel="shortcut icon"
+      href="./assests/hot-icon.svg"
+      type="image/x-icon"
+    />
+    <title>Roast My Friend</title>
   </head>
 
   <body>
