--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -20,7 +20,7 @@
     <title>Roast My Friend</title>
   </head>
 
-  <body>
+  <body class="bg-black">
     <!-- background -->
     <div
       class="w-full h-screen bg-fit bg-center bg-cover bg-[url('assests/bg.png')] font-[montserrat] flex justify-start items-center"
