--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -18,6 +18,19 @@
       type="image/x-icon"
     />
     <title>Roast My Friend</title>
+
+    <style>
+      input:checked ~ .dot {
+        transform: translateX(100%);
+        background-color: #48bb78;
+      }
+      
+      /* Toggle B */
+      input:checked ~ .dot {
+        transform: translateX(100%);
+        background-color: #48bb78;
+      }
+    </style>
   </head>
 
   <body class="bg-black">
@@ -77,6 +90,30 @@
                 >
               </div>
             </label>
+
+            <!-- Toggle Switch for English and Hinglish -->
+
+            <div class="flex items-center justify-start gap-2 text-white">
+              <div class="flex items-center justify-center w-full mb-12">
+  
+              <label for="language-switch" class="flex items-center cursor-pointer">
+                <!-- toggle -->
+                <div class="relative">
+                  <!-- input -->
+                  <input type="checkbox" class="sr-only" id="language-switch">
+                  <!-- line -->
+                  <div class="block bg-gray-600 w-14 h-8 rounded-full"></div>
+                  <!-- dot -->
+                  <div class="dot absolute left-1 top-1 bg-white w-6 h-6 rounded-full transition"></div>
+                </div>
+                <!-- label -->
+                <div class="ml-3 text-gray-700 font-medium">
+                  <span  id="language-switch-text"> Roast in English</span>
+                </div>
+              </label>
+            
+            </div>
+            </div>
 
             <button
               id="Roast-btn"
