adding google analatics and product hunt widget

--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -38,119 +38,160 @@
     <div
       class="w-full h-screen bg-fit bg-center bg-cover bg-[url('assests/bg.png')] font-[montserrat] flex justify-start items-center"
     >
-      <!-- Card -->
-      <div
-        class="bg-white bg-opacity-10 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl p-4 flex flex-col gap-4 m-auto sm:flex-row sm:m-40 justify-center"
-      >
-        <!-- Input Box -->
-        <div class="flex flex-col gap-2 w-80">
-          <div class="p-1 flex flex-col gap-1">
-            <h1 class="text-white font-black text-3xl text-center">
-              Roast My Friend
-            </h1>
-            <p class="text-white text-sm px-4 text-center opacity-40">
-              Upload the photo of your friend to roast the hell out of them
-            </p>
+      <div class="flex flex-col gap-4 m-auto sm:m-40 justify-center">
+        <!-- Card -->
+        <div
+          class="bg-white bg-opacity-10 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl p-4 flex flex-col gap-4 sm:flex-row justify-center"
+        >
+          <!-- Input Box -->
+          <div class="flex flex-col gap-2 w-80">
+            <div class="p-1 flex flex-col gap-1">
+              <h1 class="text-white font-black text-3xl text-center">
+                Roast My Friend
+              </h1>
+              <p class="text-white text-sm px-4 text-center opacity-40">
+                Upload the photo of your friend to roast the hell out of them
+              </p>
+            </div>
+
+            <!-- Drop Photo -->
+
+            <form id="uploadForm" class="flex flex-col gap-3" action="submit">
+              <div
+                id="Image_loader"
+                class="hidden absolute top-1/2 left-1/2 -translate-x-4 translate-y-2"
+              >
+                <div
+                  class="animate-spin rounded-full h-8 w-8 border-t-4 border-white absolute"
+                ></div>
+              </div>
+              <label
+                for="input-file"
+                class="Drop-area bg-white bg-opacity-5 rounded-xl border border-white border-opacity-30 flex flex-col justify-center items-center hover:bg-opacity-10 transition duration-300 h-40 w-full"
+                id="drop-area "
+              >
+                <input
+                  type="file"
+                  id="input-file"
+                  class="rounded-xl"
+                  type="image"
+                  src=""
+                  alt=""
+                  hidden
+                />
+
+                <div
+                  id="img-view"
+                  class="img-view flex flex-col justify-center items-center h-full w-full text-center text-[10px] p-12 rounded-xl text-white bg-top bg-cover cursor-pointer"
+                >
+                  <img src="./assests/drop.png" />
+
+                  <span class="mt-2 opacity-65">
+                    Upload any image form desktop</span
+                  >
+                </div>
+              </label>
+
+              <!-- Toggle Switch for English and Hinglish -->
+
+              <label
+                for="language-switch"
+                class="flex items-center cursor-pointer"
+              >
+                <!-- toggle -->
+                <div class="relative">
+                  <!-- input -->
+                  <input type="checkbox" class="sr-only" id="language-switch" />
+                  <!-- line -->
+                  <div
+                    class="block bg-white bg-opacity-5 w-14 h-8 rounded-full"
+                  ></div>
+                  <!-- dot -->
+                  <div
+                    class="dot absolute left-1 top-1 bg-white w-6 h-6 rounded-full transition"
+                  ></div>
+                </div>
+                <!-- label -->
+                <div class="ml-3 text-white font-medium">
+                  <span id="language-switch-text"> Roast in English</span>
+                </div>
+              </label>
+
+              <button
+                id="Roast-btn"
+                class="w-full py-2 bg-[#C42E0C] text-white font-bold rounded-lg hover:bg-[#FC380D] transition duration-300 flex justify-center items-center gap-2 text-lg cursor-pointer"
+                type="submit"
+              >
+                <div
+                  id="btn-loader"
+                  class="flex gap-3 text-md justify-center items-center hidden"
+                >
+                  <div
+                    class="animate-spin rounded-full h-6 w-6 border-t-4 border-white"
+                  ></div>
+                  <p>Please Wait...</p>
+                </div>
+                <p id="Roast-text" class="">🔥 LET'S ROAST</p>
+              </button>
+            </form>
           </div>
 
-          <!-- Drop Photo -->
-
-          <form id="uploadForm" class="flex flex-col gap-3" action="submit">
+          <!-- Roast Box -->
+          <div
+            id="roast-box"
+            class="flex flex-col gap-3 sm:w-[600px] hidden transition duration-800"
+          >
+            <h1 class="text-white font-black text-3xl">
+              <span class="animate-pulse">🔥</span> ROAST
+            </h1>
             <div
-              id="Image_loader"
-              class="hidden absolute top-1/2 left-1/2 -translate-x-4 translate-y-2"
+              class="p-3 text-white text-md bg-black bg-opacity-50 rounded-xl border border-white border-opacity-30"
             >
-              <div
-                class="animate-spin rounded-full h-8 w-8 border-t-4 border-white absolute"
-              ></div>
+              <p id="api-response"></p>
             </div>
-            <label
-              for="input-file"
-              class="Drop-area bg-white bg-opacity-5 rounded-xl border border-white border-opacity-30 flex flex-col justify-center items-center hover:bg-opacity-10 transition duration-300 h-40 w-full"
-              id="drop-area "
-            >
-              <input
-                type="file"
-                id="input-file"
-                class="rounded-xl"
-                type="image"
-                src=""
-                alt=""
-                hidden
-              />
-
-              <div
-                id="img-view"
-                class="img-view flex flex-col justify-center items-center h-full w-full text-center text-[10px] p-12 rounded-xl text-white bg-top bg-cover cursor-pointer"
-              >
-                <img src="./assests/drop.png" />
-
-                <span class="mt-2 opacity-65">
-                  Upload any image form desktop</span
-                >
-              </div>
-            </label>
-
-            <!-- Toggle Switch for English and Hinglish -->
-
-            <label
-              for="language-switch"
-              class="flex items-center cursor-pointer"
-            >
-              <!-- toggle -->
-              <div class="relative">
-                <!-- input -->
-                <input type="checkbox" class="sr-only" id="language-switch" />
-                <!-- line -->
-                <div
-                  class="block bg-white bg-opacity-5 w-14 h-8 rounded-full"
-                ></div>
-                <!-- dot -->
-                <div
-                  class="dot absolute left-1 top-1 bg-white w-6 h-6 rounded-full transition"
-                ></div>
-              </div>
-              <!-- label -->
-              <div class="ml-3 text-white font-medium">
-                <span id="language-switch-text"> Roast in English</span>
-              </div>
-            </label>
-
-            <button
-              id="Roast-btn"
-              class="w-full py-2 bg-[#C42E0C] text-white font-bold rounded-lg hover:bg-[#FC380D] transition duration-300 flex justify-center items-center gap-2 text-lg cursor-pointer"
-              type="submit"
-            >
-              <div
-                id="btn-loader"
-                class="flex gap-3 text-md justify-center items-center hidden"
-              >
-                <div
-                  class="animate-spin rounded-full h-6 w-6 border-t-4 border-white"
-                ></div>
-                <p>Please Wait...</p>
-              </div>
-              <p id="Roast-text" class="">🔥 LET'S ROAST</p>
-            </button>
-          </form>
+          </div>
         </div>
 
-        <!-- Roast Box -->
         <div
-          id="roast-box"
-          class="flex flex-col gap-3 sm:w-[600px] hidden transition duration-800"
+          class="flex flex-col justify-center sm:flex-row sm:gap-3 gap-1 absolute m-auto bottom-0 sm:right-1"
         >
-          <h1 class="text-white font-black text-3xl">
-            <span class="animate-pulse">🔥</span> ROAST
-          </h1>
-          <div
-            class="p-3 text-white text-md bg-black bg-opacity-50 rounded-xl border border-white border-opacity-30"
-          >
-            <p id="api-response"></p>
-          </div>
+          <a
+            href="https://www.producthunt.com/posts/roast-my-friend?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-roast&#0045;my&#0045;friend"
+            target="_blank"
+            ><img
+              src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=491390&theme=light"
+              alt="Roast&#0032;My&#0032;Friend - out&#0032;of&#0032;roasts&#0063;&#0032;try&#0032;my&#0032;app&#0032;to&#0032;roast&#0032;your&#0032;friend | Product Hunt"
+              width="250"
+              height="54"
+              class="w-[250px] h-[54px]"
+          /></a>
+          <a
+            href="https://www.buymeacoffee.com/raghavendra.design"
+            target="_blank"
+            ><img
+              src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png"
+              alt="Buy Me A Coffee"
+              width="250"
+              height="54"
+              class="h-[54px] w-[250px]"
+          /></a>
         </div>
       </div>
     </div>
+
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EM1VSNZYBJ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-EM1VSNZYBJ");
+    </script>
 
     <script src="./script.js"></script>
   </body>
