changed Google tag

--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -179,9 +179,10 @@
       </div>
     </div>
 
+    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-EM1VSNZYBJ"
+      src="https://www.googletagmanager.com/gtag/js?id=G-NKGNQRXL95"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -190,9 +191,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-EM1VSNZYBJ");
+      gtag("config", "G-NKGNQRXL95");
     </script>
-
-    <script src="./script.js"></script>
   </body>
 </html>
