--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -82,9 +82,9 @@
 
                 <div
                   id="img-view"
-                  class="img-view flex flex-col justify-center items-center h-full w-full text-center text-[10px] p-12 rounded-xl text-white bg-top bg-cover cursor-pointer"
+                  class="img-view flex flex-col justify-center items-center h-full text-center text-[10px] w-full rounded-xl text-white bg-top bg-cover cursor-pointer"
                 >
-                  <img src="./assests/drop.png" />
+                  <img class="px-12" src="./assests/drop.png" />
 
                   <span class="mt-2 opacity-65">
                     Upload any image form desktop</span
@@ -178,6 +178,8 @@
         </div>
       </div>
     </div>
+
+    <script src="./script.js"></script>
 
     <!-- Google tag (gtag.js) -->
     <script
