resolved product hunt buttons issues

--- a/roastMyFriend/index.html
+++ b/roastMyFriend/index.html
@@ -25,7 +25,7 @@
         background-color: #fff;
       }
 
-      /* Toggle B */
+      /* Toggle Button */
       input:checked ~ .dot {
         transform: translateX(100%);
         background-color: #c42e0c;
@@ -41,7 +41,7 @@
       <div class="flex flex-col gap-4 m-auto sm:m-40 justify-center">
         <!-- Card -->
         <div
-          class="bg-white bg-opacity-10 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl p-4 flex flex-col gap-4 sm:flex-row justify-center"
+          class="bg-white bg-opacity-10 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl p-4 flex flex-col gap-4 sm:flex-row justify-center z-10"
         >
           <!-- Input Box -->
           <div class="flex flex-col gap-2 w-80">
@@ -153,7 +153,7 @@
         </div>
 
         <div
-          class="flex flex-col justify-center sm:flex-row sm:gap-3 gap-1 absolute m-auto bottom-0 sm:right-1"
+          class="flex flex-col justify-center sm:flex-row sm:gap-3 gap-1 sm:absolute m-auto bottom-0 sm:right-1"
         >
           <a
             href="https://www.producthunt.com/posts/roast-my-friend?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-roast&#0045;my&#0045;friend"
