--- a/modern/index.html
+++ b/modern/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <!-- Font Link -->
+    <link href="https://fonts.cdnfonts.com/css/general-sans" rel="stylesheet" />
+
     <!-- locomotive css -->
     <link rel="stylesheet" href="./loco.css" />
 
