changed photo and corrected h1 i nav

--- a/modern/index.html
+++ b/modern/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
 
     <!-- Font Link -->
     <link href="https://fonts.cdnfonts.com/css/general-sans" rel="stylesheet" />
@@ -83,7 +83,7 @@
       <div class="about">
         <div class="top">
           <div class="center">
-            <img src="./img/cynthia.png" alt="" />
+            <img src="./img/Profile photo.jpg" alt="" />
             <div class="description">
               <h4>(about me)</h4>
               <p>
