--- a/modern/index.html
+++ b/modern/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
 
+    <link
+      rel="shortcut icon"
+      href="./img/Profile photo.jpg"
+      type="image/x-icon"
+    />
+
     <!-- Font Link -->
     <link href="https://fonts.cdnfonts.com/css/general-sans" rel="stylesheet" />
 
@@ -102,7 +108,7 @@
         <div class="bottom">
           <h5>(forgot to Mention)</h5>
           <div class="link">
-            <h4>Subscribe to my youtube channel</h4>
+            <h4>Follow me on my LinkedIn</h4>
             <i class="ri-arrow-right-up-line"></i>
           </div>
         </div>
