made semantic use

--- a/projects/socialLinksProfile/index.html
+++ b/projects/socialLinksProfile/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="background">
-      <div class="card">
+      <main class="card">
         <img width="88px" src="./image/profile-pic.png" alt="" />
         <div class="card-title">
           <h1>Jessica Randall</h1>
@@ -32,7 +32,7 @@
           <button class="link-btn">Twitter</button>
           <button class="link-btn">Instagram</button>
         </div>
-      </div>
+      </main>
     </div>
   </body>
 </html>
